tests/NormalTests/paczka1/fuzzy1/39531888.err
Error in line 4: uvvw1eWp S834 71,3
Error in line 10: UWKjMRKd5AT S513 18,7
Error in line 26: ZHHoDXtdk S834 66,0
Error in line 32: ZHHoDXtdk S513 5,7
